fix/Hover effect color on navbar's elements are not properly aligned. #173

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1381,6 +1381,7 @@ footer {
 
 .navbar-link{
   transition: font-size 1.1s ease-in-out;
+  padding: 5px 10px;
 }
 .navbar-link:hover{
   font-size: 1.2em;
